<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_pelanggan_nama">Nama</string>
    <string name="card_pelanggan_alamat">Alamat</string>
    <string name="card_pelanggan_hubungi">Hubungi</string>
    <string name="card_pelanggan_lihat">Lihat</string>
    <string name="card_pelanggan_cabang">Cabang</string>
    <string name="card_pegawai_nama">Nama Pegawai</string>
    <string name="card_pelanggan_nohp">No HP</string>
    <string name="main_estimasi">Estimasi Hari Ini</string>
    <string name="main_transaksi">Transaksi</string>
    <string name="main_pelanggan">Pelanggan</string>
    <string name="main_layanan">Layanan</string>
    <string name="main_laporan">Laporan</string>
    <string name="main_tambahan">Tambahan</string>
    <string name="main_cabang">Cabang</string>
    <string name="main_pegawai">Pegawai</string>
    <string name="main_printer">Printer</string>
    <string name="main_sentence1">Siap melayani pelanggan dengan setulus hati</string>
    <string name="main_sentence2">Jangan kecewakan pelanggan!</string>
    <string name="main_akun">Akun</string>
    <string name="title_tambahpelanggan">Tambah Pelanggan</string>
    <string name="hint_namalengkap">Nama Lengkap</string>
    <string name="button_simpan">Simpan</string>
    <string name="card_layanan_nama">Nama Layanan</string>
    <string name="harga_layanan_main_card">Harga</string>
    <string name="card_layanan_id">ID Layanan</string>
    <string name="validasi_nama_pelanggan">Nama masih kosong!</string>
    <string name="sukses_simpan_pelanggan">Data Sukses Disimpan!</string>
    <string name="gagal_simpan_pelanggan">Data Gagal Disimpan</string>
    <string name="validasi_alamat_pelanggan">Alamat masih kosong</string>
    <string name="validasi_nohp_pelanggan">Nomor HP masih kosong!</string>
    <string name="validasi_cabang_pelanggan">Cabang masih kosong</string>
    <string name="card_pegawai_id">ID Pegawai</string>
    <string name="sukses_simpan_pegawai">Data Pegawai Tersimpan!</string>
    <string name="gagal_simpan_pegawai">Data Pegawai Gagal Disimpan</string>
    <string name="validasi_nama_layanan">Nama layanan masih kosong</string>
    <string name="validasi_cabang_layanan">Cabang layanan masih kosong</string>
    <string name="sukses_simpan_layanan">Sukses Simpan Data Layanan</string>
    <string name="gagal_simpan_layanan">Gagal Simpan Data Layanan</string>
    <string name="validasi_harga_layanan">Nominal harga belum dimasukkan!</string>
    <string name="welcome_login">Selamat Datang</string>
    <string name="subheading_login">Silahkan Login untuk Melanjutkan</string>
    <string name="login_login">Masuk</string>
    <string name="password_login">Kata Kunci</string>
    <string name="terdaftar_pelanggan">Terdaftar</string>
    <string name="alamat_cabang">Alamat Cabang</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="title_tambahpegawai">Tambah Pegawai</string>
    <string name="title_tambahlayanan">Tambah Layanan</string>
    <string name="title_tambahcabang">Tambah Cabang</string>
    <string name="Pembayaran">Pembayaran</string>
    <string name="pilihmetodepembayaran">Pilih Metode Pembayaran</string>
    <string name="bayarnanti">Bayar Nanti</string>
    <string name="Tunai">Tunai</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="tanggal">Tanggal</string>
    <string name="rincian_tambahan">Rincian Tambahan</string>
    <string name="totalbayar">Total Bayar</string>
    <string name="KirimWhatsapp">KirimWhatsapp</string>
    <string name="CetakInvoince">Cetak Invoice</string>
    <string name="estimasi_hariini">Estimasi Hari Ini</string>
    <string name="SelamatPagi">Selamat Pagi</string>
    <string name="SelamatSiang">Selamat Siang</string>
    <string name="SelamatSore">Selamat Sore</string>
    <string name="SelamatMalam">Selamat Malam</string>
    <string name="nyalakan">Nyalakan</string>
    <string name="reasonbluethoot">Nyalakan bluetooth untuk mengakses fitur cetak printer thermal</string>
    <string name="bluetoothoff">Bluetooth Tidak Aktif</string>
    <string name="remindmelater">Ingatkan Saya Lagi</string>
    <string name="koneksiinternet">Koneksi Internet</string>
    <string name="turnoninternet">Silakan nyalakan koneksi internet untuk melanjutkan</string>
    <string name="cobalagi">Coba lagi</string>
    <string name="isisemuafield">Isi semua field!</string>
    <string name="registerberhasil">Register Berhasil</string>
    <string name="Gagal">Gagal:</string>
    <string name="datapenggunatidakvalid">Data pengguna tidak valid</string>
    <string name="passwordsalah">Password salah</string>
    <string name="loginberhasil">Login berhasil!</string>
    <string name="isinotelppw">Isi No. Telp dan Password!</string>
    <string name="Passwordsalah">Password Salah</string>
    <string name="idcabangtakvalid">ID cabang tidak valid</string>
    <string name="Datacabangsucceeddelete">Data cabang berhasil dihapus</string>
    <string name="Datacabangkosong">Data cabang kosong</string>
    <string name="gagalmembuatid">Gagal membuat ID</string>
    <string name="datacabangberhasildisimpan">Data cabang berhasil disimpan</string>
    <string name="data_pelanggan">👤 Data Pelanggan</string>
    <string name="layanan_utama">⚡ Layanan Utama</string>
    <string name="layanan_tambahan">🛠️ Layanan Tambahan</string>
    <string name="nama_pelanggan_transaksi">Nama Pelanggan:</string>
    <string name="no_hp_transaksi">"No HP: "</string>
    <string name="sunting">Sunting</string>
    <string name="Hapus">Hapus</string>
    <string name="detail_pelanggan">Detail Pelanggan</string>
    <string name="detail_pegawai">Detail Pegawai</string>
    <string name="namalokasicabang">Nama Lokasi Cabang</string>
    <string name="Tambahan">Tambahan</string>
    <string name="Proses">Proses</string>
    <string name="warning_delete_tambahan">Klik pada opsi yang anda pilih, jika ingin menghapus</string>
    <string name="nama_pelanggan_trans">Nama Pelanggan: %1$s</string>
    <string name="no_hp_trans">No HP: %1$s</string>
    <string name="batalmemilihpelanggan">Batal Memilih Pelanggan</string>
    <string name="nama_layanan_trans">Nama Layanan: %1$s</string>
    <string name="batal_memilih_layanan">Batal Memilih Layanan</string>
    <string name="harga_layanan_trans">Harga Layanan: %1$s</string>
    <string name="validasitransaksi1">Pilih Pelanggan dan Layanan terlebih dahulu!</string>
    <string name="validasitransaksi2">Pilih layanan dahulu!</string>
    <string name="validasitransaksi3">Pilih pelanggan dahulu!</string>
    <string name="layanan_dihapus">Layanan tambahan %1$s dihapus</string>
    <string name="nama_pelanggan_tr">Nama Pelanggan:</string>
    <string name="Nohp">No HP:</string>
    <string name="pilih_pelanggan">Pilih Pelanggan</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="nama_layanan">Nama Layanan:</string>
    <string name="harga_layanan">Harga Layanan:</string>
    <string name="informasipelanggan">Informasi Pelanggan</string>
    <string name="jenislayanan">Jenis Layanan</string>
    <string name="batal">Batal</string>
    <string name="konfirmasidata">Konfirmasi Data</string>
    <string name="sunting_pelanggan">Sunting Pelanggan</string>
    <string name="sukses_update_pelanggan">Sukses Update Pelanggan</string>
    <string name="gagal_update_pelanggan">Gagal Update Pelanggan</string>
    <string name="update_pelanggan">Ubah</string>
    <string name="detail_cabang">Detail Cabang</string>
    <string name="id_cabang">ID Cabang</string>
    <string name="sunting_pegawai">Sunting Pegawai</string>
    <string name="validasi_nama_pegawai">Nama harus diisi</string>
    <string name="validasi_alamat_pegawai">Alamat harus diisi</string>
    <string name="validasi_nohp_pegawai">No HP Harus Diisi!</string>
    <string name="validasi_cabang_pegawai">Cabang harus diisi</string>
    <string name="sukses_update_pegawai">Data berhasil diupdate</string>
    <string name="gagal_update_pegawai">Data gagal diupdate</string>
    <string name="sudah_dibayar">Sudah Dibayar</string>
    <string name="belum_dibayar">Belum Dibayar</string>
    <string name="ambil_sekarang">Ambil Sekarang</string>
    <string name="Selesai">Selesai</string>
    <string name="bayar_sekarang">Bayar</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="sub_selamatdatang">Silahkan masuk untuk mengakses layanan Laundry</string>
    <string name="login">Masuk</string>
    <string name="gapunya_akun">Belum punya akun? Daftar di sini</string>
    <string name="daftarakun">Daftar Akun</string>
    <string name="isi_data_regis">Silahkan isi data untuk membuat akun baru</string>
    <string name="daftar">Daftar</string>
    <string name="sudahpunyakun">Sudah punya akun? Masuk di sini</string>
    <string name="selamatpagi">Selamat Pagi</string>
    <string name="selamatsiang">Selamat Siang</string>
    <string name="selamatsore">Selamat Sore</string>
    <string name="selamatmalam">Selamat Malam</string>
    <string name="Printertidakditemukan">Printer tidak ditemukan</string>
    <string name="Berhasildicetak">Berhasil Dicetak</string>
    <string name="tambahlayanantambahan">Tambah Layanan Tambahan</string>
    <string name="confirm_delete">Konfirmasi Hapus</string>
    <string name="konfirmasi_hapus">Apakah anda yakin ingin menghapus layanan %1$s ?</string>
    <string name="telepon_tidak_tersedia">Telepon tidak tersedia</string>
    <string name="edit_layanan">Edit Layanan</string>
    <string name="update">Update</string>
    <string name="layanan_berhasil_diperbaharui">Layanan berhasil diperbarui</string>
    <string name="Membukawa">Membuka Whatsapp...</string>
</resources>