<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    cardElevation="4dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvDataIDLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_layanan_id"
            android:fontFamily="@font/inter"
            />
        <TextView
            android:id="@+id/tvDataNamaLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interextrabold"
            android:text="@string/card_layanan_nama"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/tvDataHargaLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/harga_layanan_main_card"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
        <TextView
            android:id="@+id/tvDataCabangLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/card_pelanggan_cabang"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingTop="8dp"
            >
            <Button
                android:layout_weight="1"
                android:id="@+id/btDataHubungiPegawai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#22c55e"
                android:padding="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/card_pelanggan_hubungi"
                android:layout_marginRight="5dp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btDataLihatPegawai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#f59e0b"
                android:padding="16dp"
                android:fontFamily="@font/inter"
                android:layout_marginLeft="5dp"
                android:text="@string/card_pelanggan_lihat"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>