<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelanggan.TambahPelanggan"
    android:background="#075e54">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/interblack"
        android:padding="10dp"
        android:text="TAMBAH PELANGGAN"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/card_pelanggan_nama"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_et"
        android:fontFamily="@font/inter"
        android:hint="@string/hint_namalengkap"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nama" />

    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/card_pelanggan_alamat"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nama" />

    <EditText
        android:id="@+id/et_alamat"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_et"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:hint="@string/card_pelanggan_alamat"
        android:textSize="12sp"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alamat" />

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/card_pelanggan_nohp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_alamat" />

    <EditText
        android:id="@+id/et_hp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_et"
        android:fontFamily="@font/inter"
        android:hint="@string/card_pelanggan_nohp"
        android:textColor="@color/black"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_cabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/card_pelanggan_cabang"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_hp" />

    <EditText
        android:id="@+id/et_cabang"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_et"
        android:fontFamily="@font/inter"
        android:hint="@string/card_pelanggan_cabang"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cabang" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/interextrabold"
        android:text="@string/button_simpan"
        android:backgroundTint="#25d366"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cabang" />

</androidx.constraintlayout.widget.ConstraintLayout>
