<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layanan.TambahLayanan"
    android:padding="20dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tambahlayanan"
        android:fontFamily="@font/interextrabold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="24dp"
        />
    <LinearLayout
        android:id="@+id/containerNama"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_layanan_nama"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahNamaLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_layanan_nama"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:textColorHint="@android:color/darker_gray"
            android:textAlignment="textStart"
            android:padding="16dp"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/containerLayanan"
        app:layout_constraintTop_toBottomOf="@id/containerNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga_layanan_main_card"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahHargaLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga_layanan_main_card"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:textAlignment="textStart"
            android:padding="16dp"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/containerCabang"
        app:layout_constraintTop_toBottomOf="@id/containerLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_cabang"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahCabangLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_cabang"
            android:textAlignment="textStart"
            android:textColorHint="@android:color/darker_gray"
            android:padding="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <Button
        app:layout_constraintTop_toBottomOf="@id/containerCabang"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_simpan"
        android:textColor="@color/white"
        android:fontFamily="@font/interextrabold"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3b82f6"
        android:id="@+id/btnSimpanLayanan"
        />
</androidx.constraintlayout.widget.ConstraintLayout>